mockup doc create v1

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
         <%= render 'layouts/navigation' %>
         <%= render 'layouts/messages' %>
       </header>
+      <% if params[:controller] == 'pages' %>
+      <%= disp_doc_page_link %>
+      <% end %>
+      
       <div id="main" role="main">
         <%= yield %>
       </div>
