added polymorphic relation and permission table

--- a/app/views/docs/index.html.erb
+++ b/app/views/docs/index.html.erb
@@ -1,4 +1,5 @@
 <h3>Your Docs</h3>
 <% @doc.each do |doc| %>
 <%= link_to doc.name, doc_path(doc) %><br />
+<%= link_to 'Add Collabarator', add_collabarator_doc_path(doc) %><br />
 <% end %>
