--- a/app/views/docs/index.html.erb
+++ b/app/views/docs/index.html.erb
@@ -3,3 +3,12 @@
 <%= link_to doc.name, doc_path(doc) %><br />
 <%= link_to 'Add Collabarator', add_collabarator_doc_path(doc) %><br />
 <% end %>
+<div class="friends_doc_list">
+<h4>Friends Docs</h4>
+<% @doc_friends.try(:each) do |doc_users| %>
+ <% doc_row = doc_users.thing %>
+<%= link_to doc_row.name, doc_path(doc_row) %><br />
+<% end %>
+</div>	
+	
+	
